k8s/k3s-home/argocd/home-automation/home-assistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-automation
  annotations:
    argocd.argoproj.io/sync-wave: "1"
