k8s/k3s-home/argocd/home-automation/home-assistant/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
  hostnames:
    - "hass.otohgunga.nl"
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
